fix tabs, change tab titles, fix overflow control column

--- a/rcwa_www/frontend_rcwa/src/App.css
+++ b/rcwa_www/frontend_rcwa/src/App.css
@@ -43,16 +43,15 @@ footer {
 }
 
 .layerControl {
-  display: flex;
-  flex-direction: column;
+  flex: 1;
   border-width: 5px;
   border-style: solid;
   margin: 5px;
   border-radius: 5px;
+  max-height: 80vh;
+  background-size: cover;
   padding: 5px;
-  overflow-x: hidden;
   overflow-y: auto;
-  flex: 2;
 }
 
 .vectorDisplay {
@@ -87,6 +86,7 @@ footer {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  justify-self: flex-end;
 }
 
 .latticeControl {
@@ -117,10 +117,9 @@ footer {
 .controlColumn {
   background-color: beige;
   width: 20%;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: stretch;
-  align-content: flex-end;
 }
 
 .graphDisplay {
